src/main/java/com/github/ibragimovaidar/testautomationplatform/engine/parser/ast/TestAutomationPlatformParser.java
// Generated from com.github.ibragimovaidar/TestAutomationPlatform.g4 by ANTLR 4.7.1
package com.github.ibragimovaidar.testautomationplatform.engine.parser.ast;

import com.github.ibragimovaidar.testautomationplatform.engine.parser.listener.TestAutomationPlatformListener;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TestAutomationPlatformParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, HTTP=22, DB=23, ASSERT=24, FEATURE=25, 
		LetterCharacters=26, StringLiteral=27, NUMBER=28, COMMENT=29, LINE_COMMENT=30, 
		WS=31;
	public static final int
		RULE_prog = 0, RULE_features = 1, RULE_feature = 2, RULE_featureName = 3, 
		RULE_assertion = 4, RULE_exression = 5, RULE_variable = 6, RULE_variableName = 7, 
		RULE_command = 8, RULE_http_command = 9, RULE_db_command = 10, RULE_httpMethod = 11, 
		RULE_httpUrl = 12, RULE_httpBody = 13, RULE_httpHeaders = 14, RULE_db_query = 15, 
		RULE_string = 16, RULE_json = 17, RULE_obj = 18, RULE_pair = 19, RULE_arr = 20, 
		RULE_value = 21;
	public static final String[] ruleNames = {
		"prog", "features", "feature", "featureName", "assertion", "exression", 
		"variable", "variableName", "command", "http_command", "db_command", "httpMethod", 
		"httpUrl", "httpBody", "httpHeaders", "db_query", "string", "json", "obj", 
		"pair", "arr", "value"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "' '", "'{'", "'}'", "';'", "'.'", "'='", "'GET'", "'POST'", "'PUT'", 
		"'DELETE'", "'PATCH'", "'OPTIONS'", "'body:'", "'headers:'", "','", "':'", 
		"'['", "']'", "'true'", "'false'", "'null'", "'http'", "'db'", "'assert'", 
		"'feature'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "HTTP", "DB", 
		"ASSERT", "FEATURE", "LetterCharacters", "StringLiteral", "NUMBER", "COMMENT", 
		"LINE_COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TestAutomationPlatform.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TestAutomationPlatformParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public FeaturesContext features() {
			return getRuleContext(FeaturesContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener) ((TestAutomationPlatformListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			features();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FeaturesContext extends ParserRuleContext {
		public List<FeatureContext> feature() {
			return getRuleContexts(FeatureContext.class);
		}
		public FeatureContext feature(int i) {
			return getRuleContext(FeatureContext.class,i);
		}
		public FeaturesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_features; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener) ((TestAutomationPlatformListener)listener).enterFeatures(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).exitFeatures(this);
		}
	}

	public final FeaturesContext features() throws RecognitionException {
		FeaturesContext _localctx = new FeaturesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_features);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FEATURE) {
				{
				{
				setState(46);
				feature();
				}
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FeatureContext extends ParserRuleContext {
		public TerminalNode FEATURE() { return getToken(TestAutomationPlatformParser.FEATURE, 0); }
		public FeatureNameContext featureName() {
			return getRuleContext(FeatureNameContext.class,0);
		}
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public List<AssertionContext> assertion() {
			return getRuleContexts(AssertionContext.class);
		}
		public AssertionContext assertion(int i) {
			return getRuleContext(AssertionContext.class,i);
		}
		public FeatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_feature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).enterFeature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).exitFeature(this);
		}
	}

	public final FeatureContext feature() throws RecognitionException {
		FeatureContext _localctx = new FeatureContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_feature);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(FEATURE);
			setState(53);
			match(T__0);
			setState(54);
			featureName();
			setState(55);
			match(T__1);
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << HTTP) | (1L << DB) | (1L << ASSERT) | (1L << LetterCharacters))) != 0)) {
				{
				setState(59);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LetterCharacters:
					{
					setState(56);
					variable();
					}
					break;
				case HTTP:
				case DB:
					{
					setState(57);
					command();
					}
					break;
				case ASSERT:
					{
					setState(58);
					assertion();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FeatureNameContext extends ParserRuleContext {
		public TerminalNode StringLiteral() { return getToken(TestAutomationPlatformParser.StringLiteral, 0); }
		public FeatureNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_featureName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).enterFeatureName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).exitFeatureName(this);
		}
	}

	public final FeatureNameContext featureName() throws RecognitionException {
		FeatureNameContext _localctx = new FeatureNameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_featureName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(StringLiteral);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssertionContext extends ParserRuleContext {
		public TerminalNode ASSERT() { return getToken(TestAutomationPlatformParser.ASSERT, 0); }
		public VariableNameContext variableName() {
			return getRuleContext(VariableNameContext.class,0);
		}
		public List<ExressionContext> exression() {
			return getRuleContexts(ExressionContext.class);
		}
		public ExressionContext exression(int i) {
			return getRuleContext(ExressionContext.class,i);
		}
		public AssertionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assertion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).enterAssertion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).exitAssertion(this);
		}
	}

	public final AssertionContext assertion() throws RecognitionException {
		AssertionContext _localctx = new AssertionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assertion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(ASSERT);
			setState(69);
			match(T__0);
			setState(70);
			variableName();
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(71);
				match(T__0);
				setState(72);
				exression();
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExressionContext extends ParserRuleContext {
		public List<TerminalNode> LetterCharacters() { return getTokens(TestAutomationPlatformParser.LetterCharacters); }
		public TerminalNode LetterCharacters(int i) {
			return getToken(TestAutomationPlatformParser.LetterCharacters, i);
		}
		public TerminalNode StringLiteral() { return getToken(TestAutomationPlatformParser.StringLiteral, 0); }
		public ExressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).enterExression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).exitExression(this);
		}
	}

	public final ExressionContext exression() throws RecognitionException {
		ExressionContext _localctx = new ExressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_exression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(LetterCharacters);
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(81);
				match(T__4);
				setState(82);
				match(LetterCharacters);
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(88);
			match(T__5);
			setState(89);
			match(StringLiteral);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public VariableNameContext variableName() {
			return getRuleContext(VariableNameContext.class,0);
		}
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).exitVariable(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_variable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			variableName();
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(92);
				match(T__0);
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98);
			match(T__5);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(99);
				match(T__0);
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			command();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableNameContext extends ParserRuleContext {
		public TerminalNode LetterCharacters() { return getToken(TestAutomationPlatformParser.LetterCharacters, 0); }
		public VariableNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).enterVariableName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).exitVariableName(this);
		}
	}

	public final VariableNameContext variableName() throws RecognitionException {
		VariableNameContext _localctx = new VariableNameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_variableName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(LetterCharacters);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandContext extends ParserRuleContext {
		public Http_commandContext http_command() {
			return getRuleContext(Http_commandContext.class,0);
		}
		public Db_commandContext db_command() {
			return getRuleContext(Db_commandContext.class,0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).enterCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).exitCommand(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_command);
		try {
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case HTTP:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				http_command();
				}
				break;
			case DB:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				db_command();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Http_commandContext extends ParserRuleContext {
		public TerminalNode HTTP() { return getToken(TestAutomationPlatformParser.HTTP, 0); }
		public HttpMethodContext httpMethod() {
			return getRuleContext(HttpMethodContext.class,0);
		}
		public HttpUrlContext httpUrl() {
			return getRuleContext(HttpUrlContext.class,0);
		}
		public List<HttpHeadersContext> httpHeaders() {
			return getRuleContexts(HttpHeadersContext.class);
		}
		public HttpHeadersContext httpHeaders(int i) {
			return getRuleContext(HttpHeadersContext.class,i);
		}
		public List<HttpBodyContext> httpBody() {
			return getRuleContexts(HttpBodyContext.class);
		}
		public HttpBodyContext httpBody(int i) {
			return getRuleContext(HttpBodyContext.class,i);
		}
		public Http_commandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_http_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).enterHttp_command(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).exitHttp_command(this);
		}
	}

	public final Http_commandContext http_command() throws RecognitionException {
		Http_commandContext _localctx = new Http_commandContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_http_command);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(HTTP);
			setState(114);
			match(T__0);
			setState(115);
			httpMethod();
			setState(116);
			match(T__0);
			setState(117);
			httpUrl();
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__13) {
				{
				{
				setState(118);
				httpHeaders();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__12) {
				{
				{
				setState(124);
				httpBody();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Db_commandContext extends ParserRuleContext {
		public TerminalNode DB() { return getToken(TestAutomationPlatformParser.DB, 0); }
		public Db_queryContext db_query() {
			return getRuleContext(Db_queryContext.class,0);
		}
		public Db_commandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_db_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).enterDb_command(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).exitDb_command(this);
		}
	}

	public final Db_commandContext db_command() throws RecognitionException {
		Db_commandContext _localctx = new Db_commandContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_db_command);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(DB);
			setState(133);
			match(T__0);
			setState(134);
			db_query();
			setState(135);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HttpMethodContext extends ParserRuleContext {
		public HttpMethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_httpMethod; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).enterHttpMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).exitHttpMethod(this);
		}
	}

	public final HttpMethodContext httpMethod() throws RecognitionException {
		HttpMethodContext _localctx = new HttpMethodContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_httpMethod);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HttpUrlContext extends ParserRuleContext {
		public TerminalNode StringLiteral() { return getToken(TestAutomationPlatformParser.StringLiteral, 0); }
		public HttpUrlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_httpUrl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).enterHttpUrl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).exitHttpUrl(this);
		}
	}

	public final HttpUrlContext httpUrl() throws RecognitionException {
		HttpUrlContext _localctx = new HttpUrlContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_httpUrl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(StringLiteral);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HttpBodyContext extends ParserRuleContext {
		public JsonContext json() {
			return getRuleContext(JsonContext.class,0);
		}
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public HttpBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_httpBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).enterHttpBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).exitHttpBody(this);
		}
	}

	public final HttpBodyContext httpBody() throws RecognitionException {
		HttpBodyContext _localctx = new HttpBodyContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_httpBody);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(T__12);
			setState(144);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(142);
				json();
				}
				break;
			case 2:
				{
				setState(143);
				string();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HttpHeadersContext extends ParserRuleContext {
		public JsonContext json() {
			return getRuleContext(JsonContext.class,0);
		}
		public HttpHeadersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_httpHeaders; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).enterHttpHeaders(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).exitHttpHeaders(this);
		}
	}

	public final HttpHeadersContext httpHeaders() throws RecognitionException {
		HttpHeadersContext _localctx = new HttpHeadersContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_httpHeaders);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(T__13);
			setState(147);
			json();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Db_queryContext extends ParserRuleContext {
		public TerminalNode StringLiteral() { return getToken(TestAutomationPlatformParser.StringLiteral, 0); }
		public Db_queryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_db_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).enterDb_query(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).exitDb_query(this);
		}
	}

	public final Db_queryContext db_query() throws RecognitionException {
		Db_queryContext _localctx = new Db_queryContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_db_query);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(StringLiteral);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringContext extends ParserRuleContext {
		public TerminalNode StringLiteral() { return getToken(TestAutomationPlatformParser.StringLiteral, 0); }
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestAutomationPlatformListener ) ((TestAutomationPlatformListener)listener).exitString(this);
		}
	}
